--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     image: mysingboxconverter
     ports:
-      - "5000:5000"
+      - "localhost:45288:5000"
     networks:
       - subconverter
 
